# bazel-rust-docker-example

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  LICENSE  Makefile  README.md  WORKSPACE  defs.bzl
.circleci/: config.yml
cargo/: crates.bzl
cargo/remote/: BUILD.cpufeatures-0.2.1.bazel  BUILD.crypto-common-0.1.2.bazel  BUILD.digest-0.10.2.bazel  BUILD.ferris-says-0.2.1.bazel  BUILD.futures-channel-0.3.21.bazel  BUILD.futures-util-0.3.21.bazel  BUILD.getrandom-0.2.4.bazel  BUILD.hmac-0.12.0.bazel  BUILD.libc-0.2.116.bazel  BUILD.libc-0.2.117.bazel  BUILD.md-5-0.10.0.bazel  BUILD.mio-0.7.14.bazel  BUILD.parking_lot_core-0.8.5.bazel  BUILD.phf_shared-0.10.0.bazel  BUILD.postgres-0.19.2.bazel  BUILD.postgres-protocol-0.6.3.bazel  BUILD.postgres-types-0.2.2.bazel  BUILD.rand-0.8.4.bazel  BUILD.sha2-0.10.1.bazel  BUILD.smallvec-0.4.5.bazel  BUILD.smawk-0.3.1.bazel  BUILD.socket2-0.4.4.bazel  BUILD.stringprep-0.1.2.bazel  BUILD.syn-1.0.86.bazel  BUILD.textwrap-0.13.4.bazel  BUILD.tokio-1.16.1.bazel  BUILD.tokio-postgres-0.7.5.bazel  BUILD.tokio-util-0.6.9.bazel  BUILD.uuid-0.8.2.bazel  BUILD.wasi-0.10.2+wasi-snapshot-preview1.bazel  BUILD.winapi-0.3.9.bazel
helper1/: BUILD.bazel  Cargo.toml  Makefile
helper1/src/: lib.rs
macro_helper/: BUILD.bazel
macro_helper/src/: lib.rs
scripts/: build_images.sh  start_bazel_remote.sh
service1/: BUILD.bazel  Cargo.toml  Makefile
service1/src/: main.rs
